--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "gridsome": "^0.6.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0"
+  },
+  "devDependencies": {
+    "style-resources-loader": "^1.2.1"
   }
 }
