--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "dependencies": {
     "gridsome": "^0.6.0",
     "node-sass": "^4.12.0",
-    "sass-loader": "^7.1.0",
-    "vue-masonry": "^0.11.7"
+    "sass-loader": "^7.1.0"
   },
   "devDependencies": {
-    "style-resources-loader": "^1.2.1"
+    "style-resources-loader": "^1.2.1",
+    "vue-masonry": "^0.11.7"
   }
 }
