Comment out masonry:

--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
   },
   "devDependencies": {
     "style-resources-loader": "^1.2.1",
-    "vue-masonry": "^0.11.7"
+    // "vue-masonry": "^0.11.7"
   }
 }
